# opus-swarm

./: .env.example  .gitignore  LEARNING_PLAN.md  README.md  main.py  pyproject.toml  requirements.txt
.lowisa/: terminal-state.json
agents/: orchestrator.py
api/: __init__.py  tasks.py
core/: __init__.py  config.py  database.py  logging.py  models.py
tests/: test_logging.py  test_models.py
